# worst-c-compiler

./: .clang-format  .gitignore  CMakeLists.txt
inc/: ahocorasick.h  ast.h  ast_format.h  nfa.h  parser.h  token.h  token_format.h  tokenizer.h  util.h
src/: nfa.cc  parser.cc  tokenizer.cc  wcc.cc
test/: call.c  file1.c  file2.c  operator_precedence_test.cc  run_tests.cc  test.h
